<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:orientation="vertical" >

            <ToggleButton
                android:id="@+id/togglePlugin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/plug_toggle"
                android:hint="@string/togglePlugin"
                android:textOff="@null"
                android:textOn="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center" >

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:orientation="vertical" >

            <ToggleButton
                android:id="@+id/toggleMoving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/moving_toggle"
                android:hint="@string/toggleMoving"
                android:textOff="@null"
                android:textOn="@null" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_stop"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@color/red"
        android:text="@string/button_stop"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="@color/blue"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/reset"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/settings"
            android:drawablePadding="3dp"
            android:text="@string/reset_pin"
            android:textColor="@color/white"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/about"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/about"
            android:drawablePadding="3dp"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/github"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/github"
            android:drawablePadding="3dp"
            android:text="@string/github"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textStyle="normal" />
    </LinearLayout>

    <com.startapp.android.publish.banner.Banner
        android:id="@+id/startAppBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</LinearLayout>