<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".EnterPINActivity" >

    <TextView
        android:id="@+id/desc"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_pin"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white" />

    <EditText
        android:id="@+id/edit_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/transparent"
        android:imeOptions="actionNext"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="19sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white" />

    <TextView
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_pin"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white" />

    <EditText
        android:id="@+id/confirm_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/transparent"
        android:imeOptions="actionDone"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="19sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white" />

    
    
    <Button
        android:id="@+id/btn_ok"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:text="@string/btn_ok" />
    
</LinearLayout>